--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-datepicker",
+  "name": "react-native-datepicker-fg",
   "version": "1.7.2",
   "description": "React Native DatePicker component for both Android and iOS, useing DatePickerAndroid, TimePickerAndroid and DatePickerIOS",
   "main": "datepicker.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xgfe/react-native-datepicker.git"
+    "url": "git+https://github.com/feige-2011/react-native-datepicker-fg.git"
   },
   "keywords": [
     "react-native",
@@ -21,32 +21,14 @@
   "author": "xgfe",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/xgfe/react-native-datepicker/issues"
+    "url": "https://github.com/feige-2011/react-native-datepicker-fg/issues"
   },
-  "homepage": "https://github.com/xgfe/react-native-datepicker#readme",
+  "homepage": "https://github.com/feige-2011/react-native-datepicker-fg#readme",
   "dependencies": {
     "moment": "^2.22.0"
   },
   "devDependencies": {
-    "babel-core": "^6.5.2",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "21.2.0",
-    "babel-preset-react-native": "4.0.0",
-    "coveralls": "^2.11.9",
-    "cz-conventional-changelog": "^1.2.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^7.0.1",
-    "inquirer": "^3.0.5",
-    "jest": "21.2.1",
-    "jsdom": "^11.3.0",
-    "jsdom-global": "^3.0.2",
-    "pre-commit": "^1.1.3",
-    "react": "16.0.0-beta.5",
-    "react-dom": "16.0.0-beta.5",
-    "react-native": "0.49.3",
-    "react-test-renderer": "16.0.0-beta.5"
+    "@react-native-community/datetimepicker": "^6.5.2",
   },
   "config": {
     "commitizen": {
